# shortcut

./: .env  .gitignore  Cargo.toml  Makefile  README.md  app_icon.rc  app_icon.res  check.sh  csv.csv  migrations.sh  package.json  release-info.txt  setup_db.sh  shortcuts.db  tailwind.config.js
.github/workflows/: ci.yml  pre_release.yml  release.yml
migrations/: 001_create_shortcut_table_up.sql  001_create_shortcuts_table_up.sql
src/: error.rs  lib.rs  main.rs  schema.rs  state.rs
src/macros/: mod.rs  renderable.rs
src/models/: shortcut.rs
src/repository/: shortcut.rs
src/routes/: middleware.rs  mod.rs  post.rs  redirect.rs  search.rs  shortcut.rs  update.rs
src/service/: shortcut.rs
src/templates/: components.rs  create.rs  index.rs  mod.rs  pages.rs  search.rs
src/utils/: mod.rs  system_util.rs
ui/assets/: main.css
ui/templates/: base.html  createPage.html  index.html  searchPage.html
ui/templates/components/: check_update.html  create.html  error.html  search.html  search_results.html  sidebar.html  success.html
ui/templates/components/alert/: success.html
ui/templates/components/button/: delete.html
ui/templates/components/common/: header.html  info.html  shortcut.html  sidebar.html
ui/templates/components/create/: check_update.html  create.html
ui/templates/components/dialog/: base.html  error.html  info.html  success.html
ui/templates/components/search/: create_new.html  search.html  search_results.html
ui/templates/pages/: createPage.html  searchPage.html
ui/templates/search/: search_results.html
