[package]
name = "shortcuts"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version= "0.8.3", features=["sqlite"] }
state = "0.6.0"
tera = { version = "1.20", default-features = false}
tera-hot-reload = { version = "0.2.4" }
tokio = { version  = "1.39.2", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
thiserror = "2.0.12"
url = "^2.5.4"
sqlx-cli = "0.8.3"
rust-fuzzy-search = "0.1.1"
lazy_static = "1.5.0"
mockall = "0.13.1"
